# T3CO

./: .gitignore  404.html  LICENSE.txt  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy_pages.yml  python-publish.yml
CodeFlow/: index.html
Global/: index.html
T3CO_Overview/: index.html
accel/: index.html
charts/: index.html
config_inputs_descriptions/: index.html
docs/: CodeFlow.md  Global.md  README.md  T3CO_Overview.md  accel.md  charts.md  config_inputs_descriptions.md  fueleconomy.md  generatedocs.md  generateinputs.md  gradeability.md  index.md  installation.md  moo.md  opportunity_cost.md  quick_start.md  run_scenario.md  scenario_inputs_descriptions.md  sweep.md  t3co_modules.md  t3co_outputs_descriptions.md  tco_analysis.md  tco_stock_emissions.md  tcocalc.md  vehicle_inputs_descriptions.md
docs/content/: CodeReference.md  accel.md  run_scenario.md  sweep.md  tco_analysis.md  tco_stock_emissions.md  tcocalc.md
docs/functions/: CodeReference.md  Global.md  accel.md  charts.md  fueleconomy.md  generateinputs.md  gradeability.md  moo.md  opportunity_cost.md  run_scenario.md  sweep.md  tco_analysis.md  tco_stock_emissions.md  tcocalc.md
docs/models/: Oxidized FASTSim for Oxidized T3CO.md  PHEVs.md  ScenarioFile.md  TCO_calculations.md  acceleration_and_grade_tests.md  fuel_efficiency_and_range.md  optimization.md  run_script_readme.md  tco_ReadMe.md
docs/old_docs/: CodeFlow.md  PHEVs.md  ScenarioFile.md  T3CO_Overview.md  TCO_calculations.md  acceleration_and_grade_tests.md  fuel_efficiency_and_range.md  optimization.md
fueleconomy/: index.html
functions/CodeReference/: index.html
functions/Global/: index.html
functions/accel/: index.html
functions/charts/: index.html
functions/fueleconomy/: index.html
functions/generateinputs/: index.html
functions/gradeability/: index.html
functions/moo/: index.html
functions/opportunity_cost/: index.html
functions/run_scenario/: index.html
functions/sweep/: index.html
functions/tco_analysis/: index.html
functions/tco_stock_emissions/: index.html
functions/tcocalc/: index.html
generatedocs/: index.html
generateinputs/: index.html
gradeability/: index.html
installation/: index.html
models/Oxidized FASTSim for Oxidized T3CO/: index.html
models/PHEVs/: index.html
models/ScenarioFile/: index.html
models/TCO_calculations/: index.html
models/acceleration_and_grade_tests/: index.html
models/fuel_efficiency_and_range/: index.html
models/optimization/: index.html
models/run_script_readme/: index.html
models/tco_ReadMe/: index.html
moo/: index.html
opportunity_cost/: index.html
quick_start/: index.html
run_scenario/: index.html
scenario_inputs_descriptions/: index.html
search/: search_index.json
sweep/: index.html
t3co/: __init__.py  sweep.py
t3co/demos/: Spencer.py  example_load_and_run.py  hev_sweep_and_moo.py  opp_cost_demo.py  t2co_opt_benchmark.py  visualization_demo.py
t3co/demos/notebooks/: 2022-07-24_raw_t3co-withmidandlow-andadjmsrp.csv  TDA_results_2022-08-22_15-11-43.csv  diesel_bench.csv
t3co/moopack/: __init__.py  moo.py
t3co/objectives/: __init__.py  accel.py  fueleconomy.py  gradeability.py
t3co/resources/: T3COConfig.csv  T3CO_Config_Demo.csv
t3co/resources/aux/: FASTSimOutputs.csv  PowertrainTechTargets.csv  payload_pdf.csv
t3co/run/: Global.py  generateinputs.py  run_scenario.py
t3co/tco/: opportunity_cost.py  tco_analysis.py  tco_stock_emissions.py  tcocalc.py
t3co/tests/: __init__.py  test_moo.py  test_tcos.py
t3co/utilities/: demo_inputs_installer.py
t3co/visualization/: charts.py  t3co_charts_app.py
t3co_modules/: index.html
t3co_outputs_descriptions/: index.html
tco_analysis/: index.html
tco_stock_emissions/: index.html
tcocalc/: index.html
vehicle_inputs_descriptions/: index.html
(+54 files in other folders)
