[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "t3co"
version = "1.0.10"
dynamic = ["dependencies"]
description = """
NREL's Transportation Technology Total Cost of Ownership tool
"""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
authors = [
  {name = "Harish Panneer Selvam", email = "Harish.PanneerSelvam@nrel.gov"},
  {name = "Alicia Birky", email = "Alicia.Birky@nrel.gov"},
  {name = "Chad Baker", email = "Chad.Baker@nrel.gov"},
]
maintainers = [
  {name = "NREL-AVCI", email = "t3co@nrel.gov"}
]
keywords = ["tco", "vehicle-cost", "total-cost", "vehicle-simulation", "total-cost-of-ownership"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
Homepage = "https://www.nrel.gov/transportation/t3co.html"
Documentation = "https://nrel.github.io/T3CO"
Repository = "https://github.com/NREL/T3CO"
"Bug Tracker" = "https://github.com/NREL/T3CO/issues"

[project.scripts]
install_t3co_demo_inputs = "t3co.utilities.demo_inputs_installer:main"

